[package]
name = "qf"
version = "0.0.1"
authors = ["Aidan Bleser"]
edition = "2021"
readme = "README.md"
documentation = "https://github.com/ieedan/qf"
homepage = "https://github.com/ieedan/qf"
description = "qf (Quick-Find) is a file search CLI that makes files searching speedy and powerful."
repository = "https://github.com/ieedan/qf"
license = "MIT"
license_file = "LICENSE"
keywords = ["File", "Search", "Quick", "Find"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
